feature: Test CRUD beans
