# cmd/api/beans.go
@@ -8,6 +8,16 @@ import (
 	"github.com/go-chi/chi/v5"
 )
 
+//	@Summary		Add Coffee bean
+//	@Description	Create new coffee bean
+//	@Tags			Beans
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		service.RequestCreateBean	true	"Payload create new bean"
+//	@Success		201		{object}	main.Envelope{data=string,error=nil}
+//	@Failure		400		{object}	main.Envelope{data=nil,error=string}
+//	@Failure		500		{object}	main.Envelope{data=nil,error=string}
+//	@Router			/beans [post]
 func (app *Application) CreateBeansHandler(w http.ResponseWriter, r *http.Request) {
 
 	var req service.RequestCreateBean
@@ -30,9 +40,16 @@ func (app *Application) CreateBeansHandler(w http.ResponseWriter, r *http.Reques
 		return
 	}
 
-	ResponseSuccess(w, r, res, http.StatusOK)
+	ResponseSuccess(w, r, res, http.StatusCreated)
 }
 
+//	@Summary		Get coffee beans
+//	@Description	Get All coffee beans
+//	@Tags			Beans
+//	@Produce		json
+//	@Success		200	{object}	main.Envelope{data=[]repository.BeansModel,error=nil}
+//	@Failure		500	{object}	main.Envelope{data=nil,error=string}
+//	@Router			/beans [get]
 func (app *Application) GetAllBeansHandler(w http.ResponseWriter, r *http.Request) {
 
 	res, err := app.Services.BeansService.FindAll(r.Context())
@@ -45,6 +62,15 @@ func (app *Application) GetAllBeansHandler(w http.ResponseWriter, r *http.Reques
 
 }
 
+//	@Summary		Get coffee bean
+//	@Description	Get coffee bean by ID
+//	@Tags			Beans
+//	@Produce		json
+//	@Param			id	path		int	true	"Id coffee bean"
+//	@Success		200	{object}	main.Envelope{data=repository.BeansModel,error=nil}
+//	@Failure		400	{object}	main.Envelope{data=nil,error=string}
+//	@Failure		500	{object}	main.Envelope{data=nil,error=string}
+//	@Router			/beans/{id} [get]
 func (app *Application) GetBeansHandler(w http.ResponseWriter, r *http.Request) {
 
 	idParam := chi.URLParam(r, "id")
@@ -65,6 +91,17 @@ func (app *Application) GetBeansHandler(w http.ResponseWriter, r *http.Request) 
 
 }
 
+//	@Summary		Update coffee bean
+//	@Description	Update coffee bean by ID
+//	@Tags			Beans
+//	@Accept			json
+//	@Produce		json
+//	@Param			id		path		int							true	"Id coffee bean"
+//	@Param			payload	body		service.RequestUpdateBean	true	"Payload Update bean"
+//	@Success		200		{object}	main.Envelope{data=string,error=nil}
+//	@Failure		400		{object}	main.Envelope{data=nil,error=string}
+//	@Failure		500		{object}	main.Envelope{data=nil,error=string}
+//	@Router			/beans/{id} [patch]
 func (app *Application) UpdateBeansHandler(w http.ResponseWriter, r *http.Request) {
 
 	idParam := chi.URLParam(r, "id")
@@ -97,6 +134,16 @@ func (app *Application) UpdateBeansHandler(w http.ResponseWriter, r *http.Reques
 
 }
 
+//	@Summary		Delete coffee bean
+//	@Description	Delete coffee bean by ID
+//	@Tags			Beans
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path	int	true	"Id coffee bean"
+//	@Success		204
+//	@Failure		400	{object}	main.Envelope{data=nil,error=string}
+//	@Failure		500	{object}	main.Envelope{data=nil,error=string}
+//	@Router			/beans/{id} [delete]
 func (app *Application) DeleteBeansHandler(w http.ResponseWriter, r *http.Request) {
 
 	idParam := chi.URLParam(r, "id")
